@@ -72,15 +72,11 @@ public final class HCatConstants {
   public static final String HCAT_KEY_OUTPUT_INFO = HCAT_KEY_OUTPUT_BASE + ".info";
   public static final String HCAT_KEY_HIVE_CONF = HCAT_KEY_OUTPUT_BASE + ".hive.conf";
   public static final String HCAT_KEY_TOKEN_SIGNATURE = HCAT_KEY_OUTPUT_BASE + ".token.sig";
-  public static final String HCAT_KEY_JOBCLIENT_TOKEN_SIGNATURE = HCAT_KEY_OUTPUT_BASE + ".jobclient.token.sig";
-  public static final String HCAT_KEY_JOBCLIENT_TOKEN_STRFORM = HCAT_KEY_OUTPUT_BASE + ".jobclient.token.strform";
 
   public static final String[] OUTPUT_CONFS_TO_SAVE = {
     HCAT_KEY_OUTPUT_INFO,
     HCAT_KEY_HIVE_CONF,
-    HCAT_KEY_TOKEN_SIGNATURE,
-    HCAT_KEY_JOBCLIENT_TOKEN_SIGNATURE,
-    HCAT_KEY_JOBCLIENT_TOKEN_STRFORM
+    HCAT_KEY_TOKEN_SIGNATURE
     };
 
 
